@@ -1,9 +1,10 @@
 package com.celements.scheduler.job;
 
+import static com.xpn.xwiki.XWikiExecutionProp.*;
 import static org.easymock.EasyMock.*;
 import static org.junit.Assert.*;
 
-import java.net.URL;
+import java.net.URI;
 import java.util.Optional;
 
 import org.junit.Before;
@@ -13,6 +14,7 @@ import org.quartz.JobExecutionContext;
 import org.quartz.JobExecutionException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+import org.xwiki.context.ExecutionContext;
 import org.xwiki.model.reference.DocumentReference;
 
 import com.celements.common.test.AbstractComponentTest;
@@ -31,7 +33,7 @@ public class AbstractJobTest extends AbstractComponentTest {
     testDocRef = new DocumentReference(getXContext().getDatabase(), "TestSpace", "testDoc");
     getXContext().setDoc(new XWikiDocument(testDocRef));
     getXContext().setRequest(new XWikiServletRequestStub());
-    getXContext().setURL(new URL("http", "testhost", 8015, "testfile"));
+    getXContext().setUri(URI.create("http://testhost:8015/testfile"));
     testJob = new TestJob();
     expect(registerComponentMock(XWikiProvider.class).get())
         .andReturn(Optional.of(getMock(XWiki.class))).anyTimes();
@@ -41,28 +43,18 @@ public class AbstractJobTest extends AbstractComponentTest {
   public void test_initExecutionContext() throws Exception {
     assertNull(getXContext().get("vcontext"));
     JobDataMap data = new JobDataMap();
-    data.put("jobDoc", new XWikiDocument(testDocRef));
-    replayDefault();
-    testJob.initContext(data);
-    verifyDefault();
-    assertNotNull(getXContext().get("vcontext"));
-    assertEquals("XWiki.Scheduler", getXContext().getUser());
-  }
-
-  @Test
-  public void test_prepareJobXWikiContext() throws Exception {
-    JobDataMap data = new JobDataMap();
     XWikiDocument jobDoc = new XWikiDocument(testDocRef);
     data.put("jobDoc", jobDoc);
     data.put("jobUser", "XWiki.MyJobUser");
     data.put("jobDatabase", "thedb");
     replayDefault();
-    testJob.prepareXWikiContext(data);
+    ExecutionContext eContext = testJob.initExecutionContext(data);
     verifyDefault();
-    assertNotSame(jobDoc, getXContext().getDoc());
-    assertEquals(jobDoc.getDocumentReference(), getXContext().getDoc().getDocumentReference());
+    assertNotNull(getXContext().get("vcontext"));
+    assertNotSame(jobDoc, eContext.get(DOC).get());
+    assertEquals("thedb", eContext.get(WIKI).get().getName());
+    assertEquals(jobDoc.getDocumentReference(), eContext.get(DOC).get().getDocumentReference());
     assertEquals("XWiki.MyJobUser", getXContext().getUser());
-    assertEquals("thedb", getXContext().getDatabase());
   }
 
   private class TestJob extends AbstractJob {
